...
    if (email === "") {
      Alert.alert(
        "Login Failed",
        "Please enter your username/email",
        [
          {
            text: 'OK'
          }
        ]
      )
      return false
    } else if (password === "") {
      Alert.alert(
...
            <Text style={styles.header}>SAF Ferry Booking App</Text>

            <Text style={styles.title}>Sign In</Text>

            <View style={styles.inputView}>
              <TextInput
                testID="UsernameInput"
                value={this.state.email}
                style={styles.inputText}
                placeholder="Username or Email"
                placeholderTextColor="white"
                onChangeText={(value) => {
                  this.setState({ email: value.trim() })
                }}
              />
            </View>

            <View style={styles.inputView}  >
              <TextInput
                testID="PasswordInput"
                secureTextEntry
                value={this.state.password}
                style={styles.inputText}
                placeholder="Password"
                placeholderTextColor="white"
                onChangeText={(value) => {
...

            <TouchableOpacity testID="loginBtn" style={styles.loginBtn}
              onPress={() => {
                // console.log("Login button pressed")
                this.choose_account()
              }}>
              <Text style={styles.loginText}>Log in</Text>
            </TouchableOpacity>

            <TouchableOpacity
              onPress={() => {
                this.props.navigation.navigate(Screens.ForgotPassword);
              }}>
...
