...
  return (
    <View style={[
      styles.actionsContainer,
      style
    ]}>
      <TouchableHighlight
        testID="approveButton"
        style={[styles.action, styles.accept]}
        underlayColor="#00c752"
        onPress={async () => {
          if (booking.bookingGroup != null && booking.bookingGroup != "") {
            { closeAllOpenRows() }
            { approveBooking() };
...
